--- a/styles.css
+++ b/styles.css
@@ -693,11 +693,18 @@ color: white;
   }
   
   form .input-single .input:valid ~ label,
-  form .input-single .input:focus ~ label {
+  form .input-single .input:focus ~ label,
+  form .input-single .input:not(:placeholder-shown) ~ label {
       transform: translateY(-24px);
       font-size: 12px;
       color: var(--c11);
   }
+  form .input-single .input.filled ~ label {
+    transform: translateY(-24px);
+    font-size: 12px;
+    color: var(--c11);
+}
+
   
   form input[type=submit] {
       padding: 15px 5vw; /* Vw para tornar o padding responsivo */
