--- a/styles.css
+++ b/styles.css
@@ -691,18 +691,18 @@ color: white;
       width: 100%;
       max-width: 400px;
   }
-  
-  form .input-single .input:valid ~ label,
-  form .input-single .input:focus ~ label,
-  form .input-single .input:not(:placeholder-shown) ~ label {
-      transform: translateY(-24px);
-      font-size: 12px;
-      color: var(--c11);
-  }
-  form .input-single .input.filled ~ label {
-    transform: translateY(-24px);
-    font-size: 12px;
-    color: var(--c11);
+/* Adicionando transições para animação suave */
+form .input-single .input ~ label {
+  transition: transform 0.3s ease, font-size 0.3s ease, color 0.3s ease;
+}
+
+form .input-single .input:valid ~ label,
+form .input-single .input:focus ~ label,
+form .input-single .input:not(:placeholder-shown) ~ label,
+form .input-single .input.filled ~ label {
+  transform: translateY(-24px);
+  font-size: 12px;
+  color: var(--c11);
 }
 
   
