--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ body {
   width: 100%;
   height: 100%;
   scroll-behavior: smooth;
+  outline: none;
 }
 
 body {
@@ -175,9 +176,11 @@ fill:transparent;
   margin-right: 4%;
   font-size: 16px;
 }
-
-.menu-toggle:hover {
-  background-color: var(--c22); /* Mudar a cor de fundo no hover */
+.menu-toggle:hover,
+.menu-toggle:focus,
+.menu-toggle:active {
+  outline: none;
+  background-color: var(--c22);
 }
 
 .logo {
@@ -282,8 +285,6 @@ main::-webkit-scrollbar-thumb:hover {
   background: var(--c11);
 }
 section {
-  margin-top: 0;
-  margin-bottom: 0px;
   min-height: 100vh;
   padding: 0;
   display: flex;
@@ -310,8 +311,8 @@ Inicio do controle da Sessão 2 About*/
 #about {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 60px 4%;
+  /* align-items: center; */
+  padding: 0px 4% 0px;
   background-color: #fff;
 }
 
@@ -322,11 +323,12 @@ Inicio do controle da Sessão 2 About*/
   max-width: 1000px;
   width: 100%;
   text-align: center;
+  margin: 0 auto;
 }
 
 .aboutcontainer h1 {
-  margin: 0px;
-  font-size: 3em;
+  margin: 45px 2% 0px;
+  font-size: 2em;
   font-weight: 300;
   color: var(--c22);
 }
@@ -377,7 +379,7 @@ Inicio do controle da Sessão 2 About*/
 /* Fim do Controle da Sessão 2 About
 Inicio do controle da Sessão 3 Education*/
 #education {
-  padding: 40px 4%;
+  padding: 0px 4% 0px;
   background-color: var(--c55);
   text-align: center;
 }
@@ -463,7 +465,7 @@ p {
 /* Fim do Controle da Sessão 3 Education
 Inicio do controle da Sessão 4 Experience*/
 #experience {
-  padding: 60px 4%;
+  padding: 0px 4% 0px;
   background-color: var(--c55);
 }
 
@@ -547,24 +549,26 @@ p {
 /* Fim do Controle da Sessão 4 Experience
 Inicio do controle da Sessão 5 Works*/
 #works {
-  padding: 60px 5px;
+  padding: 0px 5px 0px;
   margin: 0px;
 }
 #works h1 {
   text-align: center;
   color: var(--c22);
   font-size: 3em;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   font-weight: 900;
 }
 #projects {
   display: flex;
   flex-direction: row;
-  height: 400px; /* Isso garante que a altura do contêiner se estenda até o fundo da janela de visualização */
+  height: 420px; /* Isso garante que a altura do contêiner se estenda até o fundo da janela de visualização */
+  
 }
 @media screen and (max-width: 600px) {
   /* Defina a largura de quebra */
   #projects {
+    height: 550px;
     flex-direction: column; /* Altera a direção do layout flexível para coluna em telas pequenas */
   }
 }
@@ -692,7 +696,7 @@ Inicio do controle da Sessão 6 Contact*/
   display: flex;
   flex-direction: column; /* Empilhar os elementos verticalmente */
   align-items: center;
-  padding: 60px 20px 20px 20px;
+  padding: 4px 2px 2px 2px;
 }
 
 .icons-container {
@@ -892,7 +896,11 @@ form p {
   z-index: 1000;
   display: block;
 }
-
+@media screen and (max-width: 300px) {
+  #footer-info {
+    display: none;
+  }
+}
 /* Fim do Controle da Sessão 6 Contact
 Inicio Animação de manutenção */
 
