--- a/styles.css
+++ b/styles.css
@@ -189,6 +189,11 @@ fill:transparent;
 }
 .isvg-container {
   margin: 9px 2px 2px;
+  transform: matrix(1.01591, 0, 0, 1.01591, -17.3648, -3.48028);
+  transform-origin: 50% 50%;
+  transform: scale(1.5);
+  cursor: pointer;
+  transition: none 0s ease 0s;
 }
 .logo:focus,
 .logo:active {
@@ -563,7 +568,6 @@ Inicio do controle da Sessão 5 Works*/
   display: flex;
   flex-direction: row;
   height: 420px; /* Isso garante que a altura do contêiner se estenda até o fundo da janela de visualização */
-  
 }
 @media screen and (max-width: 600px) {
   /* Defina a largura de quebra */
@@ -593,7 +597,7 @@ Inicio do controle da Sessão 5 Works*/
   display: flex;
   position: relative; /* Adicionado para posicionar o vídeo dentro da div */
   overflow: hidden; /* Garante que o vídeo não saia da área da div */
-  
+
   transition: background-color 0.3s, color 0.3s, transform 0.3s;
 }
 
@@ -668,7 +672,6 @@ Inicio do controle da Sessão 5 Works*/
 .proj:focus .overlay {
   opacity: 0; /* Remove a camada escura quando o mouse passa sobre a div */
 }
-
 
 /* Fim do Controle da Sessão 5 Works
 Inicio do controle da Sessão 6 Contact*/
